# propresenterlyricexport

./: .gitignore  CHANGELOG.md  CLAUDE.md  DISTRIBUTION.md  MACOS_APP.md  QUICK_START.md  README.md  RELEASE_GUIDE.md  RELEASE_INSTRUCTIONS.md  RELEASE_PLAN.md  RELEASE_STATUS.md  RELEASING.md  SETUP.md  SETUP_SUMMARY.md  analyze-videos.js  build-macos-app.sh  electron-builder.config.js  electron.vite.config.ts  index.html  package-lock.json  package.json  plan.md  release-notes.md  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.web.ts  worklog.md
.github/: copilot-instructions.md  release.yml
.github/workflows/: codeql.yml  release.yml
assets/: icon.icns
birthday-bucket/: .env.example  .gitignore  README.md  electron-builder.config.js  electron.vite.config.ts  package-lock.json  package.json  preview.html  tsconfig.json
docs/: CONSOLIDATION_PLAN.md  DEVELOPING.md  DISTRIBUTION.md  MCP_EVALUATION.md  _config.yml  faq.md  getting-started.md  index.md  user-guide.md
docs/assets/: tabs.css
plans/: remaining-implementation.md
proxy-app/: electron-builder.config.js  electron-vite.config.ts
scripts/: build-macos-app.sh  create-dmg.sh  generate-icons.sh  setup-mac.sh  setup-windows.bat  setup-windows.ps1
src/: cli.ts  index.ts  lyrics-extractor.ts  pptx-exporter.ts  preload.ts  propresenter-client.ts  test-end-to-end.ts  test-pdf-parser.ts  test-song-matcher.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/gui/: App.tsx  (+2 more)
viewer/: config.json
viewer-app/: electron-builder.config.js  electron-vite.config.ts
(+129 files in other folders)
