[package]
name = "propresenter-lyrics-gui"
version = "0.1.0"
description = "Desktop GUI for ProPresenter Lyrics Export"
authors = ["Adam Brown"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
